Fix: set color modal to have higher z-index

--- a/src/styles/isomer-cms/elements/modal.scss
+++ b/src/styles/isomer-cms/elements/modal.scss
@@ -16,6 +16,7 @@
 }
 
 .colorModal{
+  z-index: 100;
   position: absolute;
   background: white;
   border-radius: 5px;
